Develop (#131)
* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Develop (#63)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Develop (#64)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Add option for env variable for custom location of S3 properties file

* Fix bound mounts and add S3 env variable

* Changed exit code for update password script

* Develop (#71)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Develop (#65)

* Develop (#63)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Develop (#64)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to version 2.15.0

* Fix gdal-data unzip and using latest postgis in docker compose (#66)

* Use postgres 11 and remove quotes from geoserver env password

* fix gdal-data unzip

* Add option for env variable for custom location of S3 properties file

* Fix bound mounts and add S3 env variable

* Changed exit code for update password script

* Modified scripts to solve loggin issues

* Fix various issues in the repo (#80)

* removed tomcat apr and native install since tomcat base installs this

* add variable for resource directory

* modified wget requests

* upgrade Geoserver to